2003-05-25  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-playlist.c: (gtk_playlist_add_m3u),
	(gtk_playlist_add_asf_playlist), (gtk_playlist_add_pls),
	(gtk_playlist_add_asx), (gtk_playlist_add_ra),
	(gtk_playlist_add_smil), (gtk_playlist_add_desktop),
	(gtk_playlist_add_directory), (gtk_playlist_add_mrl_with_data),
	(gtk_playlist_add_mrl): only check for playlist and "playlist/video"
	types and add the other types straight away, it will bug the user
	when they add stuff that's not files to it, makes loading files in the
	playlist a lot faster as well

2003-05-23  Bastien Nocera  <hadess@hadess.net>

	* configure.in: added dependency on gconf for the xine backend
	* src/bacon-video-widget-xine.c: (setup_config): set the proxy
	settings in xine with the gnome settings
	* src/totem-preferences.c: (visual_quality_menu_changed): actually
	set the quality when we popup the menu
	* src/totem.c: (totem_action_fullscreen_toggle): inform the video
	widget that we're switching to fullscreen

2003-05-22  Bastien Nocera  <hadess@hadess.net>

	* README: updated
	* data/schemas.sh: make sure we don't try to thumbnail flac files

2003-05-22  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (on_buffering_event): create the dialog when the
	buffering is > 0 so it doesn't get in the way of possible errors

2003-05-22  Bastien Nocera  <hadess@hadess.net>

	* README: removed TODO item
	* src/gtk-playlist.c: (gtk_playlist_add_nsv),
	(gtk_playlist_add_mrl): move the nsv work-around to another function
	* src/totem.c: (totem_action_error),
	(totem_action_fullscreen_toggle), (totem_action_set_mrl): set the logo
	mode before launching it or we'll get auto-resized on logo load,
	remove the buffering dialog if we get an error
	* src/vanity.c: (drag_video_cb), (video_widget_create): don't hide
	the main window if we get an error on startup

2003-05-22  Bastien Nocera  <hadess@hadess.net>

	* README: added TODO item
	* src/gtk-playlist.c: (gtk_playlist_add_mrl): added work-around for