@@ -241,7 +241,6 @@ A: You probably installed Totem in a different prefix. Here is how to fix it.
 TODO
 ====
 
-- gtk_xine_play/pause instead of set_speed (hmmm)
 - Maybe move it into monkeymedia? The only real gnome deps
   are gnomevfs and gconf, and i believe gtkxine depends on them already
   anyway. Would be nice to not have to pull the mm bits from a thousand
@@ -257,7 +256,6 @@ TODO
 - Browser plugin ? See for examples:
   http://lxr.mozilla.org/seamonkey/source/modules/plugin/samples/default/unix/ for examples
   http://devedge.netscape.com/library/manuals/2002/plugin/1.0/preface.html
-- have a "progress" thing going when adding more than a couple of files
 - check that the fake event is generated more often, depending on the
   intervals of the screensaver
 - automatic download and install of the proprietary codecs
